Changed image storage to cloudinary, fixed database, fixed and improved admin, removed old datas, fixed variants, added paypal sandbox pay method

--- a/src/components/pages/CheckoutPage/Payment/index.module.scss
+++ b/src/components/pages/CheckoutPage/Payment/index.module.scss
@@ -94,6 +94,19 @@
   padding: 0 2rem;
 }
 
+.paypal_button_wrapper {
+  padding: 1rem 2rem;
+  margin-top: 1rem;
+}
+
+.paypal_note {
+  margin-top: 1rem;
+  font-size: 1.4rem !important;
+  color: #b1b1b3 !important;
+  font-style: italic;
+  text-align: center;
+}
+
 .radio_unselected {
   background-color: #3c3d40;
   border: 1px solid #515255;
